adding code to Modifiers.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Compose Tutorial</string>
+    <string name="title_activity_modifiers">Modifiers</string>
 </resources>
