--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Compose Tutorial</string>
     <string name="title_activity_modifiers">Modifiers</string>
+    <string name="title_activity_image_card">ImageCardActivity</string>
+    <string name="title_activity_text_styling">TextStylingActivity</string>
 </resources>
